[tool.poetry]
name = "pdf-preview"
version = "0.2.0"
description = "PDF Previewer for Excel / Word document."
authors = ["kkzk <shohachi.kakizaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
