[tool.poetry]
name = "pdf-preview"
version = "0.2.0"
description = "PDF Previewer for Excel / Word document."
authors = ["kkzk <shohachi.kakizaki@gmail.com>"]
homepage = "https://github.com/kkzk/pdf-preview"
readme = "README.rst"
packages = [{include = "pdf_preview", from = "."}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "^6.6.2"
pypdf = "^4.0.2"
pywin32 = "^306"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdf-preview = "pdf_preview.__main__:main"